--- a/styles/style.built.css
+++ b/styles/style.built.css
@@ -1,7 +1,9 @@
 @font-face {
   font-family: "Roboto";
   font-weight: 300;
-  src: url("../fonts/Roboto-Regular.ttf") format("truetype"),
+  src: local("Roboto"),
+       url("../fonts/Roboto-Regular.woff") format("woff"),
+       url("../fonts/Roboto-Regular.ttf") format("truetype"),
        url("../fonts/Roboto-Regular.eot?#iefix") format("embedded-opentype");
 }
 
@@ -21,7 +23,6 @@ body {
           align-items: center;
   font-family: "Roboto";
   color: #333;
-  -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
 }
 
@@ -49,28 +50,21 @@ body {
 .headshot {
   cursor: -webkit-grab;
   cursor: grab;
-  width: 150px;
-  height: 150px;
+  width: 127px;
+  height: 127px;
+  margin: 16px 65px;
   -webkit-box-flex: 0;
   -webkit-flex: 0 0 auto;
       -ms-flex: 0 0 auto;
           flex: 0 0 auto;
 }
 
-.headshot-front {
-  display: block;
+.headshot.front {
+  background: url("../images/headshot.png") center no-repeat;
 }
 
-.headshot-back {
-  display: none;
-}
-
-.headshot:hover .headshot-front {
-  display: none;
-}
-
-.headshot:hover .headshot-back {
-  display: block;
+.headshot.back {
+  background: url("../images/headshot-back.png") center no-repeat;
 }
 
 .text {
@@ -94,23 +88,24 @@ body {
 
 @media screen and (max-width: 800px) {
   .wrapper { -webkit-box-orient: vertical; -webkit-box-direction: normal; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; }
-  .text {
-    margin: 0 10vw;
-  }
+  .text { margin: 0 10vw; }
 }
 
 @media only screen
-and (min-device-width : 320px)
-and (max-device-width : 568px)
-and (orientation : portrait) {
+and (min-device-width: 320px)
+and (max-device-width: 568px)
+and (orientation: portrait) {
   .wrapper {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -webkit-flex-direction: column;
         -ms-flex-direction: column;
             flex-direction: column;
+    margin-top: 5vw;
   }
-  .text {
-    margin: 0 10vw;
+  .headshot {
+    margin-bottom: 10vw;
+    margin-top: 0;
   }
+  .text { margin: 0 5vw; }
 }
