shadow + img prefetch

--- a/styles/style.built.css
+++ b/styles/style.built.css
@@ -57,6 +57,10 @@ body {
   -webkit-flex: 0 0 auto;
       -ms-flex: 0 0 auto;
           flex: 0 0 auto;
+  border-radius: 50%;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  -webkit-transition: box-shadow .30s;
+          transition: box-shadow .30s;
 }
 
 .headshot.front {
@@ -65,6 +69,10 @@ body {
 
 .headshot.back {
   background: url("../images/headshot-back.png") center no-repeat;
+}
+
+.headshot.moving {
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 
 .text {
