--- a/styles/style.css
+++ b/styles/style.css
@@ -30,6 +30,9 @@ body {
   height: 127px;
   margin: 16px 65px;
   flex: 0 0 auto;
+  border-radius: 50%;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: box-shadow .30s;
 }
 
 .headshot.front {
@@ -38,6 +41,10 @@ body {
 
 .headshot.back {
   background: url("../images/headshot-back.png") center no-repeat;
+}
+
+.headshot.moving {
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 
 .text {
