minor content changes

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -18,7 +18,7 @@ title: Victor Delgado | About me
       I enjoy startups, mountain running and good food.<br /></p>
 
       <p>Besides working on <a class="link" href="http://3scale.net">making APIs easy</a>, I love building products and even more if they
-      solve <a class="link" href="http://tinychart.co">my</a> <a class="link" href="http://requestdiff.com">own</a> <a class="link" href="https://github.com/vdel26/gifted">needs</a>.<br /></p>
+      solve <a class="link" href="/projects/">my own needs</a>.<br /></p>
 
       <p>I am always looking to work on new ideas. If you have one and you think I can help shoot me an <a class="link" href="mailto:vdel26+web@gmail.com">email</a> right away.</p>
 
