--- a/source/projects/index.html.erb
+++ b/source/projects/index.html.erb
@@ -19,19 +19,19 @@ title: Victor Delgado | Projects
     <section class="project">
       <h2 class="project__title">Requestdiff</h2>
       <div class="project__description">
-      A troubleshooting utility that allows to compare in a visual way the differences in the headers and message body between two API requests. View the <a class="project__link" href="https://github.com/vdel26/requestdiff">source</a> or visit the <a class="project__link" href="http://requestdiff.com/">site</a>.
+      A troubleshooting utility to compare in a visual way the differences in HTTP headers and the message body between two API requests. View the <a class="project__link" href="https://github.com/vdel26/requestdiff">source</a> or visit the <a class="project__link" href="http://requestdiff.com/">site</a>.
       </div>
     </section>
     <section class="project">
       <h2 class="project__title">Samwise.js</h2>
       <div class="project__description">
-      Support widget to show links to documentation that is relevant to the context the user is in at any moment. It is shipped as a Javascript library that is easy to embed in any website/webapp. Learn more <a class="project__link" href="http://localhost:4567/samwise.js">here</a>.
+      Support widget that makes it easy to show relevant documentation links based on the context of the user at any moment. It is bundled as a Javascript/CSS library that can be embedded in any website or webapp. Learn more <a class="project__link" href="/samwise.js">here</a>.
       </div>
     </section>
     <section class="project">
       <h2 class="project__title">Gifted</h2>
       <div class="project__description">
-      A tiny Mac app to generate looping GIFs from videos. Just drag&drop and it is ready to go. Also my first attempt at Objective-C. View the source <a class="project__link" href="https://github.com/vdel26/gifted">here</a> or get it from the Mac app store.
+      A tiny Mac app to generate looping GIFs from videos. Just drag&drop and it is ready to go. Also my first stint at Objective-C development. View the source <a class="project__link" href="https://github.com/vdel26/gifted">here</a> or get it from the Mac app store.
       </div>
     </section>
   </main>
