--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -74,7 +74,7 @@ body {
   cursor: grab;
   width: 8rem;
   height: 8rem;
-  margin: 2rem 0rem 4rem;
+  margin-bottom: 8rem;
   border-radius: 50%;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: box-shadow .30s;
