fix samwise.js example pages

--- a/source/samwise.js/example/index.html.erb
+++ b/source/samwise.js/example/index.html.erb
@@ -23,7 +23,7 @@ title: "Acmebnb"
 
 </main>
 
-<script src="../../js/samwise.min.js"></script>
+<%= javascript_include_tag 'https://cdn.rawgit.com/vdel26/samwise.js/master/samwise.js' %>
 <script>
   document.addEventListener('DOMContentLoaded', function () {
     // mode 1: fetch JSON description from an API
