--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -8,8 +8,7 @@
     <meta name="author" content="Victor Delgado">
     <title><%= current_page.data.title || "Victor Delgado" %></title>
 
-    <link href="//fonts.googleapis.com/css?family=Roboto+Slab:400,300" rel="stylesheet" type="text/css">
-    <link href="//fonts.googleapis.com/css?family=Roboto+Condensed:300,400" rel="stylesheet" type="text/css">
+    <link href="//fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
     <%= stylesheet_link_tag :site %>
     <%= javascript_include_tag :all %>
   </head>
