--- a/source/projects/index.html.erb
+++ b/source/projects/index.html.erb
@@ -11,6 +11,12 @@ title: Victor Delgado | Projects
 
   <main class="column column--right">
     <section class="project">
+      <h2 class="project__title">Veggies in Season</h2>
+      <div class="project__description">
+      An iOS app to help you eat healthily, by making it easy to know which vegetables and fruits are in season. Built in React Native. Get it from the <a class="project__link" href="https://itunes.apple.com/es/app/veggies-in-season/id1088215278?l=en&mt=8">App Store</a> or read <a class="project__link" href="https://medium.com/@vdg/building-an-ios-app-in-react-native-3db2f73fe878#.3ah7uud6p">here</a> about my experience building it.
+      </div>
+    </section>
+    <section class="project">
       <h2 class="project__title">Tinychart</h2>
       <div class="project__description">
       Interactive playground to create nice-looking charts very easily. It is a pure client-side application built in React.js. View the <a class="project__link" href="https://github.com/vdel26/tinychart">source</a> or give it a <a class="project__link" href="http://tinychart.co/">try</a>.
@@ -26,6 +32,12 @@ title: Victor Delgado | Projects
       <h2 class="project__title">Samwise.js</h2>
       <div class="project__description">
       Support widget that makes it easy to show relevant documentation links based on the context of the user at any moment. It is bundled as a Javascript/CSS library that can be embedded in any website or webapp. Learn more <a class="project__link" href="/samwise.js">here</a>.
+      </div>
+    </section>
+    <section class="project">
+      <h2 class="project__title">Play</h2>
+      <div class="project__description">
+      A Chrome extension to control audio or video playing in background tabs. You will no longer need to search among all your open tabs every time you have to pause what you are listening to. You can get it <a class="project__link" href="https://github.com/vdel26/play">here</a> or check the source code <a class="project__link" href="https://github.com/vdel26/play">here</a>.
       </div>
     </section>
     <section class="project">
