--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -15,7 +15,9 @@
 
   <body class="<%= page_classes %>">
 
-    <%= yield %>
+    <div class="wrapper">
+      <%= yield %>
+    </div>
 
     <%= partial "partials/_ga" %>
   </body>
