--- a/source/partials/_main-nav.erb
+++ b/source/partials/_main-nav.erb
@@ -1,6 +1,7 @@
 <nav class="main-nav">
   <ul>
-    <li><a href="/">About</a></li>
-    <li><a href="/projects/">Projects</a></li>
+    <li><a class="js-link" href="/">About</a></li>
+    <li><a class="js-link" href="/projects">Projects</a></li>
+    <li><a class="js-link" href="/test">Test</a></li>
   </ul>
 </nav>
