roll-your-own router & transitions with pagejs

--- a/source/projects/index.html.erb
+++ b/source/projects/index.html.erb
@@ -2,11 +2,11 @@
 title: Victor Delgado | Projects
 ---
 
-<aside class="column column--left">
+<aside class="column column--left <%= page_classes %>">
   <%= partial "partials/_main-nav" %>
 </aside>
 
-<main class="column column--right">
+<main class="column column--right <%= page_classes %>">
   <section class="project">
     <h2 class="project__title">Veggies in Season</h2>
     <div class="project__description">
