--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,8 @@
   <head>
     <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0'>
+
 
     <title>{% unless page.url == '/' %}{{ page.title }} - {% endunless %}{{ site.title }}</title>
 
@@ -11,11 +12,9 @@
     <link rel='icon' type='image/png' href='/uploads/favicon.png'>
     <link rel='shortcut icon' type='image/png' href='/uploads/favicon.png'>
   </head>
-  <body>
+  <body class="">
 
-    <main class="cc">
-      {{ content }}
-    </main>
+    {{ content }}
 
     <script src="/scripts/bundle.js"></script>
   </body>
