--- a/styles/main.scss
+++ b/styles/main.scss
@@ -5,14 +5,228 @@
 
 @import "variables";
 
+//----- general -----//
+
 html, body {
   margin: 0;
   padding: 0;
-  max-height: 100%;
+  height: 100%;
   overflow: hidden;
+  -webkit-font-smoothing: antialiased;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-tap-highlight-color: transparent;
 }
 
 body {
   font-family: $font-family;
+  font-style: normal;
+  font-weight: 400;
   color: $black;
+}
+
+.link {
+  color: $black;
+  text-decoration: none;
+  border-bottom: 2px solid $black;
+  white-space: nowrap;
+  cursor: pointer;
+
+  &:hover {
+    border-bottom: none;
+  }
+}
+
+.link.is-active {
+  text-decoration: line-through;
+  border-bottom: none;
+}
+
+.page {
+  position: relative;
+  font-size: 18px;
+  line-height: 1.5;
+  text-decoration: none;
+}
+
+//----- homepage -----//
+
+.page.home {
+  min-height: 100%;
+  height: 100%; // 100vh != 100% in iOS Safari
+  color: $black;
+  max-width: 84%;
+  margin: 0 auto;
+  opacity: 1;
+  transition: .6s transform $ease-out-quart .6s, .6s opacity $ease-in-quint .6s; // vuelta
+  transform: translate3d(0, 0, 0);
+  will-change: transform, opacity;
+}
+
+.home__wrapper {
+  position: absolute;
+  bottom: 0;
+  opacity: 1;
+  transition: .75s transform $tr-show-contact, .25s opacity $op-slow-in;
+  transform: translate3d(0, 0, 0);
+  will-change: transform, opacity;
+}
+
+@media only screen and (min-width: 900px) {
+  .home {
+    font-size: 30px;
+  }
+}
+
+.about {
+  max-width: 80%;
+}
+
+.contact {
+  display: block;
+  margin-top: 2rem;
+  font-size: 12px;
+  cursor: pointer;
+  opacity: 0;
+  transition: 1s opacity $op-slow-in;
+  will-change: opacity;
+}
+
+@media only screen and (min-width: 900px) {
+  .contact {
+    font-size: 1rem;
+  }
+}
+
+//----- contact -----//
+
+.is-showing-contact .home__wrapper {
+  transform: translate3d(0, -10%, 0);
+}
+
+.is-showing-contact .contact {
+  opacity: 1;
+}
+
+.contact__link {
+  color: $lightgrey;
+  text-decoration: none;
+  transition: color .25s ease;
+
+  &:first-child:before {
+    content: "/ ";
+    padding-right: .5rem;
+    color: $lightgrey;
+  }
+
+  &::after {
+    content: " / ";
+    padding: 0 .5rem;
+    color: $lightgrey;
+  }
+
+  &:last-child:after {
+    content: " /";
+    padding-left: .5rem;
+    color: $lightgrey;
+  }
+
+  &:hover {
+    color: $black;
+  }
+}
+
+//----- projects -----//
+
+.projects {
+  min-height: 100%;
+  height: 100%;
+  pointer-events: none;
+  background: $black;
+  color: $white;
+  font-size: 28px;
+  overflow-y: auto;
+  overflow-x: hidden;
+  opacity: 0.1;
+  transition: .3s transform $ease-out-cubic .6s, .3s opacity ease 1s; // vuelta
+  transform: translate3d(0, 0, 0);
+  will-change: transform, opacity;
+}
+
+.projects__wrapper {
+  padding: 20vh 0;
+  width: 80%;
+  max-width: 400px;
+  margin: 0 auto;
+  z-index: 1;
+  opacity: 0;
+  transition: .5s opacity ease; // vuelta
+  will-change: opacity;
+}
+
+.projects__close {
+  position: fixed;
+  right: 2rem;
+  top: 2rem;
+  fill: $white;
+  width: 20px;
+  cursor: pointer;
+  z-index: 2;
+  opacity: 0;
+  transition: .5s opacity ease;
+}
+
+.is-showing-projects {
+  .home {
+    opacity: 0;
+    transform: translate3d(0, -100%, 0);
+    transition: .5s transform $tr-move-screen, .25s opacity $op-slow-in .25s; // ida
+  }
+
+  .projects {
+    opacity: 1;
+    pointer-events: auto;
+    transform: translate3d(0, -100%, 0);
+    transition: .5s transform $tr-move-screen, .5s opacity ease; // ida
+  }
+
+  .projects__wrapper {
+    opacity: 1;
+    transition: .5s opacity ease .75s; // ida
+  }
+
+  .projects__close {
+    opacity: 1;
+    transition: .5s opacity ease .75s; // ida
+  }
+}
+
+.project__title {
+  font-size: 24px;
+  font-weight: 300;
+  margin: 0 0 1rem 0;
+  line-height: 1.7;
+  cursor: pointer;
+
+  &.is-active {
+    text-decoration: line-through;
+  }
+}
+
+.project__body {
+  font-size: 1rem;
+  margin: 0 0 2rem 0;
+  display: none;
+}
+
+.project__body.is-active {
+  display: block;
+}
+
+@media only screen and (min-width: 900px) {
+  .project__title {
+    font-size: 28px;
+  }
 }
