--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,14 +5,13 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0'>
 
-
     <title>{% unless page.url == '/' %}{{ page.title }} - {% endunless %}{{ site.title }}</title>
 
     <link rel='stylesheet' href='/styles/main.css'>
     <link rel='icon' type='image/png' href='/uploads/favicon.png'>
     <link rel='shortcut icon' type='image/png' href='/uploads/favicon.png'>
   </head>
-  <body class="">
+  <body>
 
     {{ content }}
 
