--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,8 @@
     <title>{% unless page.url == '/' %}{{ page.title }} - {% endunless %}{{ site.title }}</title>
 
     <link rel='stylesheet' href='/styles/main.css'>
-    <link rel='icon' type='image/png' href='/uploads/favicon.png'>
-    <link rel='shortcut icon' type='image/png' href='/uploads/favicon.png'>
+    <link rel='icon' href='/assets/favicon.ico'>
+    <link rel='shortcut icon' href='/assets/favicon.ico'>
   </head>
   <body>
 
