--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,14 @@
     <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0'>
+    <meta name='description' content='Victor Delgado'>
+    <meta name='keywords' content='product design, software, web, mobile, interactive, prototype, Victor Delgado, thenorthstudio.com'>
+    <meta name='author' content='Victor Delgado'>
+    <title>Victor Delgado</title>
 
-    <title>{% unless page.url == '/' %}{{ page.title }} - {% endunless %}{{ site.title }}</title>
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="http://victordg.com">
+    <meta property="og:url" content="http://victordg.com">
 
     <link rel='stylesheet' href='/styles/main.css'>
     <link rel='icon' href='/assets/favicon.ico'>
@@ -15,6 +21,6 @@
 
     {{ content }}
 
-    <script src="/scripts/bundle.js"></script>
+    <script src='/scripts/bundle.js'></script>
   </body>
 </html>
